# App-to-predict-Stocks-with-graph

./: Procfile  README.md  RENDER_DEPLOY.md  build.sh  pyproject.toml  render.yaml  requirements.txt  start.sh
StockPredictionPortal/: Procfile  README.md  requirements.txt
StockPredictionPortal/StockPredictionPortal/: settings.py  views.py
StockPredictionPortal/StockPredictionPortal/StockPredictionPortal/: settings.py
StockPredictionPortal/StockPredictionPortal/StockPredictionPortal/ml/: stock_predictor.py
StockPredictionPortal/StockPredictionPortal/ml/: stock_predictor.py
StockPredictionPortal/StockPredictionPortal/templates/: base.html  home.html
StockPredictionPortal/authentication/templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
