[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-predictor"
version = "1.0.0"
description = "Stock prediction app with ML"
requires-python = ">=3.10,<3.11"
dependencies = [
    "Django==5.2.6",
    "pandas>=1.5",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "yfinance>=0.2.25",
    "scikit-learn>=1.2",
    "tensorflow>=2.13",
    "django-environ>=0.9.0",
    "gunicorn>=20.1.0",
    "whitenoise>=6.0",
    "Pillow>=9.0",
]
